--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "name": "stylish-cow",
   "dependencies": {
     "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
     "clsx": "^1.1.1",
+    "fontsource-roboto": "^4.0.0",
     "next": "^10.0.8",
+    "ramda": "^0.27.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-use": "^17.2.1"
   },
   "scripts": {
     "dev": "next",
