--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
+    "@reduxjs/toolkit": "^1.5.0",
     "@types/ramda": "^0.27.38",
     "@types/throttle-debounce": "^2.1.0",
     "clsx": "^1.1.1",
@@ -12,7 +13,9 @@
     "ramda": "^0.27.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
     "react-use": "^17.2.1",
+    "redux": "^4.0.5",
     "sleep-promise": "^9.1.0",
     "throttle-debounce": "^3.0.1"
   },
@@ -27,6 +30,7 @@
     "@types/node": "^14.14.34",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.2",
+    "@types/react-redux": "^7.1.16",
     "prettier": "^2.2.1",
     "typescript": "^4.2.3"
   }
