Увеличить размер ссылок

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -79,6 +79,7 @@
     "no-param-reassign": "off",
     "import/no-unresolved": "off",
     "no-use-before-define": "off",
-    "@typescript-eslint/no-use-before-define": ["error"]
+    "@typescript-eslint/no-use-before-define": ["error"],
+    "jsx-a11y/alt-text": "off"
   }
 }
