Переместил файлы конфига

--- a/server.ini
+++ b/server.ini
@@ -4,7 +4,7 @@ module = uwsgi:app
 master = true
 processes = 5
 
-socket = myproject.sock
+socket = server.sock
 chmod-socket = 660
 vacuum = true
 
