--- a/server.ini
+++ b/server.ini
@@ -4,7 +4,7 @@ module = wsgi:app
 master = true
 processes = 5
 
-socket = server.sock
+socket = 127.0.0.1:5000
 chmod-socket = 660
 vacuum = true
 
