Настроить форматирование для md файлов

--- a/package.json
+++ b/package.json
@@ -63,6 +63,9 @@
     "*.@(js|jsx|ts|tsx)": [
       "prettier --write",
       "npm run eslint"
+    ],
+    "*.@(md)": [
+      "prettier --write"
     ]
   }
 }
